[package]
name = "bevy_dragging_testbed"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.25.0", features = ["debug-render-3d"] }
bevy_mod_picking = { version = "0.18.2", default-features = false, features = ["backend_rapier"] }
bevy_egui = "0.26.0"
bevy-inspector-egui = "0.23"
rand = "0.8"

# Enable a small amount of optimization in the dev profile.
# [profile.dev]
# opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
